Обновление 2023, доработка эргономики

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,9 +9,9 @@
     <p class="text-secondary text-center">Идея сервиса:</p>
     <p class="text-center">Выпускники ФАЛТ МФТИ 2013 и их друзья</p> <br>
     <p class="text-secondary text-center">Реализация:</p>
-    <p class="text-center">ukrop</p>
+    <p class="text-center">serxopter</p>
     <p class="text-secondary text-center">Хостинг, консультации:</p>
-    <p class="text-center">Брат <a href="https://badbalance.pro" class="link">slam_v</a></p>
+    <p class="text-center">Брат <a href="https://badb.fun" class="link">slam_v</a></p>
 </div>
 
 {% endblock %}
