--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,26 +13,19 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="d-flex flex-wrap align-items-center justify-content-between">
-    Действия с бюджетом:
-    <div class="d-flex flex-row py-2 px-2">
+<!--Действия с бюджетом-->
+<div class="row flex-nowrap justify-content-end">
+    <div class="col-auto ml-1">
         <a href="{{url_for('print_budget', budget_file=budget_file)}}" title="Отчёт">
-            <img src={{url_for('static', filename='report.png' )}} alt="Отчёт" border="0"
-                 class="pictobutton mx-2"></a>
-        <a href="{{url_for('copy_budget', budget_file=budget_file)}}" title="Создать копию"
-           class="confirm-required" message="Создать копию бюджета &quot;{{budget_file[:-4:]}}&quot;?">
-            <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
-                 class="pictobutton mx-2"></a>
-        <a href="{{url_for('delete_budget', budget_file=budget_file)}}" title="Удалить"
-           class="confirm-required" message="Удалить бюджет &quot;{{budget_file[:-4:]}}&quot;?">
-            <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
-                 class="pictobutton mx-2"></a>
+            Отчёт
+            <img src={{url_for('static', filename='report.png' )}} alt="Отчёт" border="0" class="pictobutton mx-2">
+        </a>
     </div>
+
 </div>
 
 <!--Траты-->
-<div class="card mb-2">
+<div class="card mb-2 mt-2">
     <!--
     <div class="card-header">
         <p class="text-center h5">Траты</p>
@@ -305,6 +298,22 @@
 
         </div>
     </form>
+</div>
+
+<!--Действия с бюджетом-->
+<div class="row flex-nowrap justify-content-end">
+    <div class="col-auto ml-1">
+         <a href="{{url_for('copy_budget', budget_file=budget_file)}}" title="Создать копию"
+           class="confirm-required" message="Создать копию бюджета &quot;{{budget_file[:-4:]}}&quot;?">
+            <img src={{url_for('static', filename='cpy.png' )}} alt="Создать копию" border="0"
+                 class="pictobutton mx-2"><h6> Копия </h6></a>
+    </div>
+    <div class="col-auto ml-1">
+         <a href="{{url_for('delete_budget', budget_file=budget_file)}}" title="Удалить"
+           class="confirm-required" message="Удалить бюджет &quot;{{budget_file[:-4:]}}&quot;?">
+            <img src={{url_for('static', filename='cross.png' )}} alt="Удалить" border="0"
+                 class="pictobutton mx-2"> <h6> Удалить </h6></a>
+    </div>
 </div>
 
 {% endblock %}
