--- a/templates/report.html
+++ b/templates/report.html
@@ -19,7 +19,7 @@
     <div class="col">
         <p class="text-right">
             <a href="{{url_for('edit_budget', budget_file=budget_file)}}" title="Редактировать">
-                Редактировать
+                Редактировать бюджет
             </a>
         </p>
     </div>
